crates/turborepo/tests/snapshots/query__check_query.snap
---
source: crates/turborepo-lib/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "index.js",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "nm/index.js"
            }
          ]
        },
        "errors": {
          "items": []
        }
      }
    }
  }
}
