crates/turborepo/tests/snapshots/query__turbo_trace_get_`circular.ts`_with_dependencies_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "circular.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "circular2.ts"
            }
          ]
        }
      }
    }
  }
}
