crates/turborepo/tests/snapshots/query__turbo_trace_get_`export_named.js`_with_dependencies_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "export_named.js",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "bar.js"
            },
            {
              "path": "foo.js"
            }
          ]
        }
      }
    }
  }
}
